kubernetes/apps/system-upgrade-controller/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: system-upgrade-controller
  labels:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/warn: privileged
