kubernetes/apps/system-upgrade-controller/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: system-upgrade-controller
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
